--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <form class="search-form" id="search-form">
-      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-      <button type="submit">Search</button>
+      <div class="input-btn-wrap">
+        <input type="text" name="searchQuery" class="input" autocomplete="off" placeholder="Search images..." />
+      <button class="btn-search" type="submit">Search</button>
+      </div>
     </form>
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more" >Load more</button>
   </body>
 </html>
