--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
-    <button type="button" class="load-more" >Load more</button>
+    <div class="container">
+      <button type="button" class="load-more" hidden>Load more</button>
+    </div>
   </body>
 </html>
